# rcdt_franka

./: README.md
rcdt_franka/: CMakeLists.txt  package.xml
rcdt_franka/config/: gamepad_mapping.yaml  robot_controllers.yaml  ros_controller.yaml  servo_params.yaml  simulation_controllers.yaml
rcdt_franka/launch/: controllers.launch.py  franka.launch.py  moveit.launch.py  robot.launch.py  simulation.launch.py
rcdt_franka/nodes/: gripper_action_server.py  joy_to_gripper_node.py  settings_setter.py  simulated_gripper_node.py
rcdt_franka/rviz/: general.rviz
rcdt_franka/urdf/: franka.urdf.xacro
rcdt_franka_moveit_config/config/: joint_limits.yaml  planning_pipeline.yaml
